<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey0"
    tools:context=".user.views.fragment.UserMainFragment">

    <include
        android:id="@+id/includeHeader"
        layout="@layout/header_bg_white_content_black" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:layout_marginBottom="@dimen/_50sdp"
        app:layout_constraintTop_toBottomOf="@id/includeHeader" />

    <ImageView
        android:id="@+id/ivCurrentLoc"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/drawable_white_rounded_corner_5dp"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/ic_target"
        android:translationZ="@dimen/_2sdp"
        app:layout_constraintBottom_toBottomOf="@id/mapView"
        app:layout_constraintEnd_toEndOf="@id/mapView" />

    <TextView
        android:id="@+id/tvTitleStartLoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:fontFamily="@font/basiercircle_medium"
        android:text="@string/current_loc"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mapView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clSearchedStartLoc"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/drawable_white_rounded_corner_5dp"
        android:translationZ="@dimen/_5sdp"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/tvTitleStartLoc">

        <TextView
            android:id="@+id/tvSearchedStartLoc"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/_10sdp"
            android:background="@color/white"
            android:ellipsize="end"
            android:fontFamily="@font/basiercircle_regular"
            android:gravity="center_vertical"
            android:hint="@string/choose_current_loc"
            android:maxLines="1"
            android:padding="@dimen/_5sdp"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ivSearchStartLoc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivSearchStartLoc"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:background="?android:actionBarItemBackground"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvSearchedStartLoc"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/colorRed" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvTitleEndLoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/basiercircle_medium"
        android:text="@string/dest_loc"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clSearchedStartLoc" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clSearchedEndLoc"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/drawable_white_rounded_corner_5dp"
        android:translationZ="@dimen/_5sdp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@id/clSearchedStartLoc"
        app:layout_constraintStart_toStartOf="@id/clSearchedStartLoc"
        app:layout_constraintTop_toBottomOf="@id/tvTitleEndLoc">

        <TextView
            android:id="@+id/tvSearchedEndLoc"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/_10sdp"
            android:background="@color/white"
            android:fontFamily="@font/basiercircle_regular"
            android:gravity="center_vertical"
            android:hint="@string/choose_dest_loc"
            android:maxLines="1"
            android:padding="@dimen/_5sdp"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ivSearchEndLoc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivSearchEndLoc"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:background="?android:actionBarItemBackground"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvSearchedEndLoc"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/colorRed" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnAction"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginHorizontal="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_32sdp"
        android:backgroundTint="@color/black"
        android:text="@string/done"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/clSearchedEndLoc"
        app:layout_constraintStart_toStartOf="@id/clSearchedEndLoc"
        app:layout_constraintTop_toBottomOf="@id/clSearchedEndLoc" />
</androidx.constraintlayout.widget.ConstraintLayout>